--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "fabric-loom" version "1.7-SNAPSHOT"
+    id "fabric-loom" version "1.13-SNAPSHOT"
     id "com.matthewprenger.cursegradle" version "1.4.0"
     id "com.modrinth.minotaur" version "2.+"
 }
@@ -18,6 +18,7 @@ repositories {
     maven { url "https://maven.nucleoid.xyz" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     maven { url "https://jitpack.io" }
+    maven { url "https://repo.lucko.me/" }
     maven {
         url "https://cursemaven.com"
         content {
@@ -53,7 +54,7 @@ dependencies {
 
     include implementation("club.minnced:discord-webhooks:${project.webhook_version}")
     include implementation("com.vdurmont:emoji-java:5.1.1")
-    include implementation("me.lucko:spark-api:0.1-SNAPSHOT")
+    compileOnly("me.lucko:spark-api:0.1-SNAPSHOT")
 
     // Technically optional, but you won't have translations without it
     include modRuntimeOnly("xyz.nucleoid:server-translations-api:${project.server_translations_version}")
